--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "food-ordering-app",
     "version": "1.0.0",
     "description": "Food Ordering App",
-    "main": "app.js",
+
     "scripts": {
         "test": "jest",
         "start": "parcel index.html",
@@ -14,6 +14,8 @@
     "dependencies": {
         "@babel/preset-react": "^7.22.15",
         "@reduxjs/toolkit": "^1.9.5",
+        "@swc/helpers": "^0.5.2",
+        "firebase": "^10.4.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.1.2",
